// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`subscription deserializes 1`] = `
Object {
  "displayName": "Foo!",
  "email": "foo@example.com",
  "messageTypes": Array [
    13,
    42,
  ],
  "readFrequency": 0.2,
}
`;

exports[`subscription deserializes with avatar 1`] = `
Object {
  "avatar": Object {
    "type": "avatar",
    "url": "AVA_URL",
  },
  "displayName": "Foo!",
  "email": "foo@example.com",
  "messageTypes": Array [
    13,
    42,
  ],
  "readFrequency": 0.2,
}
`;

exports[`subscription deserializes with last received data 1`] = `
Object {
  "displayName": "Foo!",
  "email": "foo@example.com",
  "lastReceivedDate": 123,
  "messageTypes": Array [
    13,
    42,
  ],
  "readFrequency": 0.2,
}
`;

exports[`subscription deserializes with last received data 2`] = `
Object {
  "displayName": "Foo!",
  "email": "foo@example.com",
  "lastReceivedDate": 456,
  "messageTypes": Array [
    13,
    42,
  ],
  "readFrequency": 0.2,
}
`;

exports[`subscription deserializes with last received data 3`] = `
Object {
  "displayName": "Foo!",
  "email": "foo@example.com",
  "lastReceivedDate": 1628000000,
  "messageTypes": Array [
    13,
    42,
  ],
  "readFrequency": 0.2,
}
`;

exports[`subscription deserializes with monogram 1`] = `
Object {
  "displayName": "Foo!",
  "email": "foo@example.com",
  "messageTypes": Array [
    13,
    42,
  ],
  "monogram": Object {
    "color": "#000",
    "letters": "MG",
  },
  "readFrequency": 0.2,
}
`;
